# DS100

./: .gitattributes  .gitignore  README.md  pyproject.toml
disc/catchup/: Catchup2.ipynb  catchup_1_su25.ipynb
disc/disc02/: disc02-worksheet-blank.ipynb  disc02_groupwork_blank.ipynb
disc/disc04/: disc04_coding_exercises.ipynb
disc/disc10/: disc10_blank-Copy1.ipynb
hw/hw01/: hw01.ipynb
hw/hw02A/: hw02A.ipynb
hw/hw02B/: hw02B.ipynb
hw/hw03/: hw03.ipynb
hw/hw04/: hw04.ipynb
hw/hw06/: hw06.ipynb
hw/hw07/: hw07.ipynb
lab/lab01/: lab01.ipynb
lab/lab02A/: lab02A.ipynb
lab/lab02B/: lab02B.ipynb
lab/lab03/: lab03.ipynb
lab/lab04/: lab04.ipynb
lab/lab05/: lab05.ipynb
lab/lab06/: lab06.ipynb
lab/lab07/: lab07.ipynb
lab/lab08/: lab08.ipynb
lab/lab09/: lab09.ipynb
lab/lab10/: lab10.ipynb
lab/lab11/: lab11.ipynb
lab/lab12/: lab12.ipynb
lecture/lec02/: data8_translation_examples.ipynb  lec02.ipynb
lecture/lec03/: lec03.ipynb
lecture/lec04/: lec04.ipynb
lecture/lec05/: lec05-part-1-eda-tuberculosis.ipynb  lec05-part-2-eda-structure.ipynb
lecture/lec06/: lec06.ipynb
lecture/lec07/: lec07.ipynb
lecture/lec08/: lec08.ipynb
lecture/lec09/: lec09.ipynb
lecture/lec10/: lec10.ipynb
lecture/lec11/: lec11.ipynb
lecture/lec12/: lec12.ipynb
lecture/lec13/: lec13.ipynb
lecture/lec14/: lec14.ipynb
lecture/lec16/: lec16.ipynb
lecture/lec17/: lec17.ipynb
lecture/lec18/: lec18.ipynb
lecture/lec19/: lec19.ipynb
lecture/lec20/: lec20.ipynb
lecture/lec21/: lec21.ipynb
lecture/lec22/: lec22.ipynb
(+12 files in other folders)
