[project]
name = "data-100"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "otter-grader>=6.1.3",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tf-keras>=2.15.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]
